@@ -57,4 +57,6 @@ Disassembly of section \.text:
 [ 	]*[0-9a-fA-F]+:[ 	]+e5 04[ 	]+inl? +\$0x4,%eax
 [ 	]*[0-9a-fA-F]+:[ 	]+e5 08[ 	]+inl? +\$0x8,%eax
 [ 	]*[0-9a-fA-F]+:[ 	]+e5 00[ 	]+inl? +\$0x0,%eax
+[ 	]*[a-f0-9]+:	48 b8 01 00 00 80 00 00 00 00 	movabs \$0x80000001,%rax
+[ 	]*[a-f0-9]+:	48 b8 01 00 00 80 00 00 00 00 	movabs \$0x80000001,%rax
 #pass
