@@ -1,3 +1,9 @@
+2010-09-03  H.J. Lu  <hongjiu.lu@intel.com>
+
+	PR gas/11974
+	* gas/i386/immed64.s: Add more movabs tests.
+	* gas/i386/immed64.d: Updated.
+
 2010-09-03  Jan Kratochvil  <jan.kratochvil@redhat.com>
 
 	* gas/elf/dwarf2-1.d: Update DW_OP_reg5 expected output.
