@@ -1,3 +1,9 @@
+2010-09-03  H.J. Lu  <hongjiu.lu@intel.com>
+
+	PR gas/11974
+	* config/tc-i386.c (i386_finalize_immediate): Check flag_code
+	instead of use_rela_relocations for 64bit.
+
 2010-09-02  Richard Henderson  <rth@redhat.com>
 
 	* dw2gencfi.c (TC_DWARF2_EMIT_OFFSET): Provide default.
